--- a/gemfile
+++ b/gemfile
@@ -1,4 +1,1 @@
-source "https://rubygems.org"
-
-gem "github-pages", group: :jekyll_plugins
-gem "jekyll-include-cache", group: :jekyll_plugins
+gem "minimal-mistakes-jekyll"
